# 360feedback-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  shotgun_patch.diff
.github/workflows/: ci.yml
.shotgun/: tasks.yaml
architecture/app/bot/: ARCH-bot-admin-flow-v1.md  ARCH-bot-respondent-flow-v1.md
architecture/app/data_model/: ARCH-data-model-v1.md
architecture/app/data_source/: ARCH-data-source-gsheets-v1.md  ARCH-data-source-redis-v1.md
architecture/app/service/: ARCH-service-employee-v1.md  ARCH-service-feedback-cycle-v1.md  ARCH-service-questionnaire-v1.md
backend/src/: __main__.py  config.py
backend/src/bot/: commands.py
backend/src/bot/handlers/: admin.py  respondent.py
backend/src/bot/keyboards/: admin_keyboards.py  cycle_list_keyboard.py  employee_select_keyboard.py  respondent_select_keyboard.py
backend/src/bot/middlewares/: auth.py
backend/src/bot/states/: cycle_creation.py
backend/src/services/: cycle_service.py  employee_service.py  google_sheets.py  question_service.py  report_service.py
backend/src/storage/: models.py  redis_storage.py
backend/tests/: test_example.py
docs/: arch_plan.md  spec_360_feedback_bot.md
infra/: Dockerfile  docker-compose.yml
scripts/: populate_questions_sheet.py
tasks/2025-Q2/: TASK-2025-001-setup-core-services-and-data-sources.md  TASK-2025-002-implement-admin-cycle-creation-flow.md  TASK-2025-003-implement-respondent-survey-flow.md  TASK-2025-004-implement-employee-management.md  TASK-2025-005-implement-questionnaire-management.md
